# TaylorTorchBinaryPackage

./: .gitignore  CMakeLists.txt  README.md  get-pre-build-torch.sh  setenv.sh
.github/workflows/: build-artifactbundles.yml
ATenCXX/include/: aten_shim.hpp  module.modulemap  tensor_shim.hpp
ATenCXX/src/: aten_shim.cpp
cmake/: info.json.in
